classDiagram

    %% Scheduler
    class Scheduler {
        <<abstract>>
        - taskSet : TaskSet
        - clock : MyClock
        - simulationDuration : Duration
        - logger : TraceLogger
        + analyze() : void
    }

    class FixedPriorityScheduler {
        <<abstract>>
        + analyze() : void
        # assignPriority() : void
    }

    class DeadlineMonotonicScheduler {
        <<final>>
        # assignPriority() : void
    }

    %% Strategy
    class DeadlineMissStrategy {
        <<interface>>
        + handleDeadlineMiss() : void
    }

    class AbortSimulationStrategy {
        <<final>>
        + handleDeadlineMiss() : void
    }

    class AbortJobStrategy {
        <<final>>
        + handleDeadlineMiss() : void
    }

    class ContinueStrategy {
        <<final>>
        + handleDeadlineMiss() : void
    }

    %% TaskSet
    class TaskSet {
        <<final>>
        - tasks : Set~Task~
    }

    class Task {
        <<final>>
        - periodSampler : Sampler
        - deadline : Duration
        - executionTimeSampler : Sampler
        - firstReleaseTime : Duration
        - priority : int
        + sampleNextPeriod() : Duration
        + releaseJob(Duration releaseTime) : Job
    }

    class Job {
        <<final>>
        - task : Task
        - absoluteDeadline : Duration
        + execute(Duration durationAvailable) : Duration
        + isDeadlineMissed(Duration currentTime) : boolean
    }

    %% Event
    class Event {
        <<abstract>>
        - time : Duration
    }

    class ReleaseEvent {
        <<final>>
        - task : Task
    }

    class DeadlineEvent {
        <<final>>
        - job : Job
    }

    %% Sampler
    class Sirio.Sampler {
        <<interface>>
        + getSample() : BigDecimal
    }

    class DeterministicSampler {
        <<final>>
        - value : BigDecimal
        + getSample() : BigDecimal
    }

    class DiscreteChoiceSampler {
        <<final>>
        - values : List~BigDecimal~
        - probabilities : List~Double~
        + getSample() : BigDecimal
    }

    %% Utils
    class MyClock {
        <<final>>
        - currentTime : Duration
        + advanceTo(Duration newTime) : void
        + advanceBy(Duration delta) : void
        + printCurrentTime() : String
        + reset() : void
    }

    class TraceLogger {
        <<final>>
        + log(String message) : void
        + close() : void
    }

    class TaskExecutionTimeCollector{
        <<final>>
        - taskExecutionTime : Map~Task,ListDuration~
        + visualyze() : void
    }

    class DeadlineMissCollector{
        <<final>>
        - deadlineMissCount : Map~Task,ListJob~
        - jobPerTaskReleased : Map~Task,Integer~
    }

    class ConfigLoader {
        <<final>>
    }

    %% Relationships
    Client --> Scheduler : analyse()
    Client --> ConfigLoader
    %% Scheduler
    Scheduler <|-- FixedPriorityScheduler
    FixedPriorityScheduler <|-- DeadlineMonotonicScheduler
    Scheduler --> MyClock
    Scheduler --> TaskExecutionTimeCollector
    Scheduler --> DeadlineMissCollector
    FixedPriorityScheduler o-- TaskSet
    FixedPriorityScheduler o-- Event : eventQueue
    Scheduler --> TraceLogger
    Scheduler *-- DeadlineMissStrategy
    %% TaskSet
    TaskSet *-- Task
    Job o-- Task
    Task o-- Sirio.Sampler : periodSampler
    Task o-- Sirio.Sampler : executionTimeSampler
    Task ..> Job : releaseJob
    %% Event
    Event <|-- ReleaseEvent
    Event <|-- DeadlineEvent
    %% Sampler
    Sirio.Sampler <|.. DeterministicSampler
    Sirio.Sampler <|.. DiscreteChoiceSampler
    %% Streategy
    DeadlineMissStrategy <|.. AbortSimulationStrategy
    DeadlineMissStrategy <|.. AbortJobStrategy
    DeadlineMissStrategy <|.. ContinueStrategy